--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -87,12 +87,12 @@
                 <h4 class="modal-title">{{popupTittle}}</h4>
             </div>
             <div class="modal-body" style="background-color:#fff;">
-               <div class="modal-content">
+                <div class="modal-content">
                     <div class="ibox-title" style="background-color:#9bb97f; color:white;">
                         <h5>Dados da Criança</h5>
                     </div>
              	
-                    <form class="form-horizontal" id="form_crianca">
+                    <form class="form-horizontal" id="form_crianca" name="form_crianca">
                         <div class="form-group">
                             <div class="col-lg-9">
                                
@@ -108,15 +108,15 @@
                         
                         <div class="form-group"><label class="col-lg-2 control-label">Nome</label>
                             <div class="col-lg-9">
-                            	<input type="text" placeholder="Nome" class="form-control" ng-model="crianca.nome"> 
+                            	<input type="text" placeholder="Nome" class="form-control" ng-model="crianca.nome" ng-required="true"> 
                             </div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Data Nascimento</label>
-                            <div class="col-lg-9"><input type="date" class="form-control" placeholder="Data Nascimento" ng-model="crianca.dataNascimento" id="criancadataNascimento"></div>
+                            <div class="col-lg-9"><input type="date" class="form-control" placeholder="Data Nascimento" ng-model="crianca.dataNascimento" id="criancadataNascimento" ng-required="true"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Sexo</label>
                             <div class="col-lg-9">
-	                            <select class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.sexo">
+	                            <select class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.sexo" ng-required="true">
 					                <option value=""></option>
 					                <option value="Masculino">Masculino</option>
 					                <option value="Feminino">Feminino</option>
@@ -131,49 +131,56 @@
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Morada</label>
                             <div class="col-lg-9">
-                                <select  class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.morada">
-                                    <option value=""></option>
-                                    <option value="Palmarejo">Palmarejo</option>
+                                <select  class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.morada"  ng-required='true' ng-options='localidade for localidade in localidades'>
+                                  
                                 </select>
                             </div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-2 control-label">Propina</label>
-                            <div class="col-lg-9"><input type="number" placeholder="Propina" class="form-control" ng-model="crianca.propina"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Idade</label>
                             <div class="col-lg-9"><input type="number" placeholder="Idade" readonly="" class="form-control" ng-model="crianca.idade"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Periodo</label>
-                            <label class="col-lg-2 control-label">Manhã</label><div class="col-lg-1"><input type="checkbox"></div>
-                            <label class="col-lg-1 control-label">Tarde</label><div class="col-lg-1"><input type="checkbox"></div>
-                            <label class="col-lg-1 control-label">Almoço</label><div class="col-lg-1"><input type="text"></div>
+                            <div class="col-lg-9">
+                                <label class="col-lg-2 control-label">Manhã</label><div class="col-lg-1"><input type="checkbox" ng-model="crianca.periodoManha"></div>
+                                <label class="col-lg-1 control-label">Tarde</label><div class="col-lg-1"><input type="checkbox"ng-model="crianca.periodoTarde"></div>
+                                <label class="col-lg-2 control-label">Todo o dia</label><div class="col-lg-1"><input type="checkbox" ng-model="crianca.diaInteiro"></div>
+                            </div>
+                        </div> 
+                        <div class="form-group"><label class="col-lg-2 control-label">Propina</label>
+                            <div class="col-lg-9"><input type="number" placeholder="Propina" class="form-control" ng-model="crianca.propina" ng-required="true"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Lingua Estrang.</label>
+                            <div class="col-lg-9">
+                                <label class="col-lg-2 control-label">Francês</label><div class="col-lg-1"><input type="checkbox" ng-model="crianca.linguaFrancesa"></div>
+                                <label class="col-lg-1 control-label">Inglês</label><div class="col-lg-1"><input type="checkbox" ng-model="crianca.linguaInglesa"></div>
+                                <label class="col-lg-2 control-label">Almoço</label><div class="col-lg-2"><input type="text"   ng-model="crianca.almoco"></div>
+                           </div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Data Inicio</label>
-                            <div class="col-lg-9"><input type="date" class="form-control" placeholder="data Inicio Jardim" ng-model="crianca.dataInicioJardim"></div>
+                            <div class="col-lg-9"><input type="date" class="form-control" placeholder="data Inicio Jardim" ng-model="crianca.dataInicioJardim" ng-required="true"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Estado</label>
                             <div class="col-lg-9">
-                                <select class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.estado">
+                                <select class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.estado" ng-required="true">
                                     <option value=""></option>
                                     <option value="Matriculado">Matriculado</option>
                                     <option value="Desistiu">Desistiu</option>
+                                    <option value="Escola">Suspenso</option>
                                     <option value="Escola">Escola</option>
 					            </select>
                             </div>
                         </div> 
-                    </form>
-                </div>
-                <div class="ibox-title" style="">
-                       
-                    </div>
-                <div class="modal-content">
-                    <div class="ibox-title" style="background-color:#2f4050; color:white;">
-                        <h5>Dados do Pai</h5>
-                    </div>
-                    <div class="ibox-title" style="">
-                       
-                    </div>
-                    <form class="form-horizontal" id="">
+                        <div class="ibox-title" style="">
+                           
+                        </div>
+                      
+                        <div class="ibox-title" style="background-color:#2f4050; color:white;">
+                            <h5>Dados do Pai</h5>
+                        </div>
+                        <div class="ibox-title" style="">
+                           
+                        </div>
+                        
                         <div class="form-group"><label class="col-lg-2 control-label">Nome do Pai</label>
                             <div class="col-lg-9"><input type="text" placeholder="Nome do Pai" class="form-control" ng-model="crianca.nomePai"></div>
                         </div>
@@ -192,19 +199,16 @@
                         <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
                             <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.alcunhaPai"></div>
                         </div>
-                    </form>
-                </div>
-                <div class="ibox-title" style="">
-                       
-                </div>
-                <div class="modal-content">
-                    <div class="ibox-title" style="background-color:#ab3436; color:white;">
-                        <h5>Dados da Mãe</h5>
-                    </div>
-                    <div class="ibox-title" style="">
-                       
-                    </div>
-                    <form class="form-horizontal" id="">
+                        <div class="ibox-title" style="">
+                               
+                        </div>
+                        <div class="ibox-title" style="background-color:#ab3436; color:white;">
+                            <h5>Dados da Mãe</h5>
+                        </div>
+                        <div class="ibox-title" style="">
+                           
+                        </div>
+                            
                         <div class="form-group"><label class="col-lg-2 control-label">Nome da Mãe</label>
                             <div class="col-lg-9"><input type="text" placeholder="Nome da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
                         </div>
@@ -223,15 +227,15 @@
                         <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
                             <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.alcunhaMae"></div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
+                            <button type="button" class="btn btn-primary" ng-click="criarCrianca(crianca)" ng-show="sizeCrianca.length==0" ng-disabled="form_crianca.$invalid">Registar</button>
+                            <button type="button" class="btn btn-primary" ng-click="editarCrianca(crianca)" ng-show="sizeCrianca.length>0" >Editar</button>
+                            <button type="button" class="btn btn-danger"  ng-click="eliminarCrianca(crianca)" ng-show="sizeCrianca.length>0" data-toggle="modal" data-target="#myModal4"><span>Eliminar</span></button>
+                            
+                        </div>
                     </form>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
-                <button type="button" class="btn btn-primary" ng-click="criarCrianca(crianca)" ng-show="sizeCrianca.length==0">Registar</button>
-                <button type="button" class="btn btn-primary" ng-click="editarCrianca(crianca)" ng-show="sizeCrianca.length>0" >Editar</button>
-                <button type="button" class="btn btn-danger"  ng-click="eliminarCrianca(crianca)" ng-show="sizeCrianca.length>0" data-toggle="modal" data-target="#myModal4"><span>Eliminar</span></button>
-                
             </div>
         </div>
     </div>
