--- a/partials/criancas/criancas-details.html
+++ b/partials/criancas/criancas-details.html
@@ -1,108 +1,81 @@
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-12">
-        <div class="" style="text-align:right;">
-            <div class="col-lg-12">
-                <h2></h2>
-                <ol class="breadcrumb">
-                    <li>
-                        <a href="#/criancas"><span><button class="btn btn-primary">Listar Todas Crianças</button></span></a>
-                    </li>                    
-                </ol>
+ <div class="row">
+    <div class="col-md-12">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title">
+               
+            </div>
+            <div class="ibox-content">
+                 <a href="#/criancas"><span><button class="btn btn-primary">Listar Todas Crianças</button></span></a>
+           
             </div>
         </div>
     </div>
 </div>
-<div class="row animated fadeInRight">  
-    <div class="col-lg-3">
-        <div class="ibox float-e-margins">
-            <div class="ibox-content mailbox-content">
-                <div class="file-manager">
-                    <a class="btn btn-block btn-primary compose-mail" href="">Perfil da Crianca</a>
-                    <div class="space-25"></div>
+<div class="wrapper wrapper-content">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-left">Perfil Criança</span>
+                    <h5></h5>
+                </div>
+                <div class="ibox-content">
                     <div id="profile-container" class="">
-                        <image id="profileImage" src="img/superHeroy.jpg" class="img-circle circle-border m-b-md"/>
+                        <image id="profileImage" src="img/superHeroy.jpg" class="img-circle circle-border m-b-md"/></image>
                         <input id="imageUpload" type="file"  name="profile_photo" placeholder="Photo" required="" capture>
                     </div>
                     <div class="space-25"></div>
                     <h5>Informações</h5>
                     <ul class="folder-list m-b-md" style="padding: 0">
-                        <li><a ng-click="listarPagamentos()"><button style="border:none; background-color:#f3f3f4" data-toggle="modal" data-target="#modalTodosPagamentos"> <i class="fa fa-inbox "></i> Pagamentos</button><span class="label label-success pull-right">{{totalPagamentos}}</span></a></li>
-                        <li><a ng-click="listarDividas()"><button style="border:none; background-color:#f3f3f4" data-toggle="modal" data-target="#modalTodasDividas"> <i class="fa fa-inbox "></i> Dividas</button><span class="label label-danger pull-right">{{totalDividas}}</span></a></li>
+                        <li><a ng-click="listarPagamentos()"><button style="border:none; background-color:white" data-toggle="modal" data-target="#modalTodosPagamentos"> <i class="fa fa-inbox "></i> Pagamentos</button><span class="label label-success pull-right">{{totalPagamentos}}</span></a></li>
+                        <li><a ng-click="listarDividas()"><button style="border:none; background-color:white" data-toggle="modal" data-target="#modalTodasDividas"> <i class="fa fa-inbox "></i> Dividas</button><span class="label label-danger pull-right">{{totalDividas}}</span></a></li>
                     </ul>
-                    <!--<h5>Categories</h5>
-                    <ul class="category-list" style="padding: 0">
-                        <li><a> <i class="fa fa-circle text-navy"></i> Work </a></li>
-                        <li><a> <i class="fa fa-circle text-danger"></i> Documents</a></li>
-                        <li><a> <i class="fa fa-circle text-primary"></i> Social</a></li>
-                        <li><a> <i class="fa fa-circle text-info"></i> Advertising</a></li>
-                        <li><a> <i class="fa fa-circle text-warning"></i> Clients</a></li>
-                    </ul>-->
                     <div class="clearfix"></div>
+
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="wrapper wrapper-content animated fadeInUp">
-                <div class="ibox">
-                    <div class="ibox-content">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="m-b-md">
-                                   
-                                    <h2>Relátorios da Criança</h2>
-                                </div>
-                                <!--<div>
-                                    <span>Pagamentos 10</span> |
-                                    <span>Dividas 3</span> |
-                                    <span>Estado Matriculado</span>
-                                </div>-->
-                                
+        </div>   
+        <div class="col-md-9">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-left">Relátorios da Criança</span>
+                    <h5></h5>
+                </div>
+                <div class="ibox-content">
+                    <div class="panel blank-panel">
+                        <div class="panel-heading">
+                            <div class="panel-options">
+                                <ul class="nav nav-tabs">                                           
+                                    <li class="active"><a data-toggle="tab" ng-click='paisEncarregadosEducacao()'>Dados Criança</a></li>
+                                    <li class=""><a data-toggle="tab" ng-click='dadosEstatisticos()' >Dados Estatísticos</a></li>
+                                    <li class=""><a data-toggle="tab" ng-click='casoUrgencia()' >Informações em caso de Urgência</a></li>
+                                </ul>
                             </div>
                         </div>
-                        
-                        <div class="row m-t-sm">
-                            <div class="col-lg-12">
-                                <div class="panel blank-panel">
-                                    <div class="panel-heading">
-                                        <div class="panel-options">
-                                            <ul class="nav nav-tabs">                                           
-                                                <li class="active"><a data-toggle="tab" ng-click='paisEncarregadosEducacao()'>Dados Criança</a></li>
-                                                <li class=""><a data-toggle="tab" ng-click='dadosEstatisticos()' >Dados Estatísticos</a></li>
-                                                <li class=""><a data-toggle="tab" ng-click='casoUrgencia()' >Informações em caso de Urgência</a></li>
-                                            </ul>
-                                        </div>
+                        <div class="panel-body">
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="tab-1">
+                                    <div ng-show="Table=='paisEncarregadosEducacao'">
+                                        <div ng-include="'partials/criancas/paisEncarregadosEducacao.html'"></div>
+                                  
                                     </div>
-                                    <div class="panel-body">
-                                        <div class="tab-content">
-                                            <div class="tab-pane active" id="tab-1">
-                                                <div ng-show="Table=='paisEncarregadosEducacao'">
-                                                    <div ng-include="'partials/criancas/paisEncarregadosEducacao.html'"></div>
-                                              
-                                                </div>
-                                                <div ng-show="Table=='dadosEstatisticos'">
-                                                    <div ng-include="'partials/criancas/dadosEstatisticos.html'"></div>
-                                              
-                                                </div>
-                                                <div ng-show="Table=='casoUrgencia'">
-                                                    <div ng-include="'partials/criancas/casoUrgencia.html'"></div>
-                                              
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div ng-show="Table=='dadosEstatisticos'">
+                                        <div ng-include="'partials/criancas/dadosEstatisticos.html'"></div>
+                                  
                                     </div>
-
+                                    <div ng-show="Table=='casoUrgencia'">
+                                        <div ng-include="'partials/criancas/casoUrgencia.html'"></div>
+                                  
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>         
     </div>
 </div>
-
 <div class="modal inmodal" id="modalTodosPagamentos" tabindex="-1" role="dialog" aria-hidden="true" style="margin-top:25vh;">
     <div class="modal-dialog" style="width:80vw;">
     <div class="modal-content animated bounceInRight">
