--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -1,33 +1,12 @@
 
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-12">
-        <h4>{{tittle}}</h4>
-        <ol class="breadcrumb" style="text-align: right;">
-            <li>
-                <div class="text-center">
-			        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalRegistarCrianca" ng-click="botaoRegistarCrianca()">
-			            Registar Criança
-			        </button>
-    			</div>
-            </li>
-           
-           <!-- <li class="active">
-                <strong>Breadcrumb</strong>
-            </li>-->
-        </ol>
-    </div>
-</div>
-
 <!-- Table applay Criancas -->
 
-<div class="row" style="margin-top:2vh;">
+<div class="row">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
 	        <div class="ibox-title">
 	            <h5>Lista de Todas as Crianças</h5>
-	            <div class="ibox-tools">
-	                
-	            </div>
+	            
 	        </div>
 	        <div class="ibox-content">
                 <div class="row m-b-sm m-t-sm">
@@ -37,9 +16,16 @@
                     <div class="col-md-1">
                        
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-8">
                         <div class="input-group"><input type="text" placeholder="Pesquisar" class="input-sm form-control"  ng-model="pesquisar"> <span class="input-group-btn">
                             <button type="button" class="btn btn-sm btn-primary">Pesquisar!</button> </span></div>
+                    </div> 
+                    <div class="col-md-2">
+                        <div class="ibox-tools">                    
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalRegistarCrianca" ng-click="botaoRegistarCrianca()">
+                                Registar Criança
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="table-responsive">
@@ -75,7 +61,7 @@
                                     <!--<li><span style="margin-top:-1.7vh; height:20vh; width:4vw;position: absolute; margin-left:-0.5vw;"> <i class="fa fa-sort-up"></i></span></li> -->                              
                                     <li>                                           
                                         <div>
-                                       <a href="#/criancas-details/{{crianca.idCrianca}}" style="color:#676a71;"><button style="border:none; background-color:#FFFFFF; "><i class="fa fa-eye"></i> Ver</button></a>
+                                       <a href="#/criancas-details/{{crianca.idCrianca}}"><button style="border:none; background-color:#FFFFFF;color:black;" data-toggle="modal"><i class="fa fa-eye"></i> Ver</button></a>
                                            <!-- <button style="border:none; background-color:#FFFFFF" ng-click="editar(crianca)" data-toggle="modal" data-target="#modalRegistarCrianca" style="" > Editar</button>-->
                                         </div>                                                
                                     </li>
@@ -401,9 +387,14 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <div class="text-right">
-                                          <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
-                                        <button class="btn btn-primary" ng-click="efetuarPagamento()"><i class=""></i> Efetuar Pagamento</button>
+                                    <div class="text-right" ng-show="total == 0">
+                                        <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
+                                        <button class="btn btn-primary" ng-disabled="true" ng-click="efetuarPagamento()"><i class=""></i> Efetuar Pagamento</button>
+                                    </div>
+
+                                    <div class="text-right" ng-show="total != 0">
+                                        <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
+                                        <button class="btn btn-primary" ng-disabled="false" ng-click="efetuarPagamento()"><i class=""></i> Efetuar Pagamento</button>
                                     </div>
                                      
                                 </div>
